--- a/apps/kamsguard-web/src/app/core/home/home.component.html
+++ b/apps/kamsguard-web/src/app/core/home/home.component.html
@@ -15,8 +15,65 @@
     </div>
   </section>
 
+  <section class="features">
+    <mat-card class="feature-card">
+      <mat-icon>notifications</mat-icon>
+      <mat-card-title>Real-time Alerts</mat-card-title>
+      <mat-card-content>
+        Get immediate notifications for any fire-related incidents.
+      </mat-card-content>
+    </mat-card>
+
+    <mat-card class="feature-card">
+      <mat-icon>sensors</mat-icon>
+      <mat-card-title>Detector Status</mat-card-title>
+      <mat-card-content>
+        Monitor the status of all connected fire detectors.
+      </mat-card-content>
+    </mat-card>
+
+    <mat-card class="feature-card">
+      <mat-icon>alarm</mat-icon>
+      <mat-card-title>Recent Activity</mat-card-title>
+      <mat-card-content>
+        Review the recent activity of your fire detection system.
+      </mat-card-content>
+    </mat-card>
+  </section>
+
+  <section class="information">
+    <img
+      src="/Kamsware-Fire-Prevention-Systems.jpg"
+      alt="Information Image"
+      class="info-image slide-in-left"
+    />
+    <div class="info-content slide-in-right">
+      <h2>KamsGuard Fire Prevention System</h2>
+      <p>Don’t give the fire a chance. Get Immediate Fire Detection System.</p>
+      <p>
+        With our “State-of-the-Art” Fire Prevention System you will be always on
+        the safe side.
+      </p>
+    </div>
+  </section>
+
+  <section class="information">
+    <div class="info-content slide-in-left">
+      <h2>About KamsGuard</h2>
+      <p>
+        Learn more about our mission, values, and how we provide cutting-edge
+        fire detection solutions.
+      </p>
+    </div>
+    <img
+      src="/Kamsware-Fireprotection-System.jpg"
+      alt="Information Image"
+      class="info-image slide-in-right"
+    />
+  </section>
+
   <section class="industrial-solutions">
-    <div class="industrial-solutions-content">
+    <div class="industrial-solutions-content slide-in-left">
       <h3>KamsGuard Fire Prevention System</h3>
 
       <p>Don’t give fire a chance—act before it’s too late.</p>
@@ -49,64 +106,7 @@
     </div>
   </section>
 
-  <section class="information">
-    <img
-      src="/Kamsware-Fire-Prevention-Systems.jpg"
-      alt="Information Image"
-      class="info-image"
-    />
-    <div class="info-content">
-      <h2>KamsGuard Fire Prevention System</h2>
-      <p>Don’t give the fire a chance. Get Immediate Fire Detection System.</p>
-      <p>
-        With our “State-of-the-Art” Fire Prevention System you will be always on
-        the safe side.
-      </p>
-    </div>
-  </section>
-
-  <section class="information">
-    <div class="info-content">
-      <h2>About KamsGuard</h2>
-      <p>
-        Learn more about our mission, values, and how we provide cutting-edge
-        fire detection solutions.
-      </p>
-    </div>
-    <img
-      src="/Kamsware-Fireprotection-System.jpg"
-      alt="Information Image"
-      class="info-image"
-    />
-  </section>
-
-  <section class="features">
-    <mat-card class="feature-card">
-      <mat-icon>notifications</mat-icon>
-      <mat-card-title>Real-time Alerts</mat-card-title>
-      <mat-card-content>
-        Get immediate notifications for any fire-related incidents.
-      </mat-card-content>
-    </mat-card>
-
-    <mat-card class="feature-card">
-      <mat-icon>sensors</mat-icon>
-      <mat-card-title>Detector Status</mat-card-title>
-      <mat-card-content>
-        Monitor the status of all connected fire detectors.
-      </mat-card-content>
-    </mat-card>
-
-    <mat-card class="feature-card">
-      <mat-icon>alarm</mat-icon>
-      <mat-card-title>Recent Activity</mat-card-title>
-      <mat-card-content>
-        Review the recent activity of your fire detection system.
-      </mat-card-content>
-    </mat-card>
-  </section>
-
-  <div class="app-footer">
+  <!-- <div class="app-footer">
     <app-footer></app-footer>
-  </div>
+  </div> -->
 </div>
