--- a/apps/kamsguard-web/src/app/app.component.scss
+++ b/apps/kamsguard-web/src/app/app.component.scss
@@ -23,14 +23,14 @@ $shadow-color: rgba(0, 0, 0, 0.1);
   left: 0;
   right: 0;
   z-index: 1000; /* Ensure the header is above other content */
-  height: 80px; /* Adjust to match your header height */
+  height: 80px; 
 }
 
 /* Main content and sidebar setup */
 .main-content {
   display: flex;
-  flex: 1; /* Allow content to grow and push the footer down */
-  margin-top: 80px; /* Adjust this value to match the height of your header */
+  flex: 1; 
+  margin-top: 40px; 
 }
 
 /* Sidebar setup */
@@ -44,18 +44,21 @@ app-sidenav {
 /* Content area */
 .content {
   flex: 1; /* Make content fill the available space */
-  padding: 20px;
   overflow-y: auto;
   transition: margin-left 0.3s ease; /* Smooth transition for sidebar toggle */
+  min-height: 100vh;
 }
 
 /* Adjust content when sidebar is hidden or shown */
 .content.with-sidebar {
   margin-left: 250px; /* Adjust margin when sidebar is visible */
+  padding-left: 10px;
+
 }
 
 .content.without-sidebar {
   margin-left: 0; /* No sidebar, no left margin */
+  width: 100%;
 }
 
 
