--- a/apps/kamsguard-web/src/app/core/layout/header/header.component.html
+++ b/apps/kamsguard-web/src/app/core/layout/header/header.component.html
@@ -1,24 +1,18 @@
-
-   <!-- toolbar.component.html -->
-<mat-toolbar class="custom-toolbar">
+<mat-toolbar [ngClass]="{'hidden': !isHeaderVisible}" class="custom-toolbar">
   <button
-   mat-icon-button
-   class="neumorphic-button"
-   class="example-icon"
-   aria-label="Toggle Sidebar"
-   (click)="toggleSidebar()"
- >
-   <mat-icon>menu</mat-icon>
- </button>
-   &nbsp;
-   <span class="brand-logo" routerLink = '/home'>KamsGuard Solutions</span>
-   <span class="example-spacer"></span>
-  <button mat-icon-button class="notification-icon" routerLink = '/notifications' aria-label="Notification icon button">
-   <mat-icon>notifications</mat-icon>
- </button>
-   &nbsp;
- 
- <button mat-button routerLink="/auth" routerLinkActive="active" class="neumorphic-button">Login</button>
- 
- </mat-toolbar>
- 
+    mat-icon-button
+    class="neumorphic-button"
+    aria-label="Toggle Sidebar"
+    (click)="toggleSidebar()"
+  >
+    <mat-icon>menu</mat-icon>
+  </button>
+  &nbsp;
+  <span class="brand-logo" routerLink='/home'>KamsGuard Solutions</span>
+  <span class="example-spacer"></span>
+  
+  <!-- New navigation links -->
+  <a class="nav-link" routerLink="/">Home</a>
+  <a class="nav-link" routerLink="/contact-us">Support</a>
+  <a class="nav-link" routerLink="/auth">My Account</a>
+</mat-toolbar>
