--- a/apps/kamsguard-web/src/app/core/home/home.component.html
+++ b/apps/kamsguard-web/src/app/core/home/home.component.html
@@ -25,7 +25,7 @@
     </mat-card>
 
     <mat-card class="feature-card">
-      <mat-icon>sensors</mat-icon>
+      <mat-icon class="icon">sensors</mat-icon>
       <mat-card-title>Detector Status</mat-card-title>
       <mat-card-content>
         Monitor the status of all connected fire detectors.
