--- a/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.html
+++ b/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.html
@@ -35,11 +35,11 @@
         </li>
         <li>
           <a
-            routerLink="/real-time"
+            routerLink="/notifications"
             routerLinkActive="active"
             (click)="handleLinkClick()"
-            ><span class="menu-icon material-icons">settings</span
-            ><span class="menu-text">System Status</span></a
+            ><span class="menu-icon material-icons">forward_to_inbox</span
+            ><span class="menu-text">Notifications</span></a
           >
         </li>
       </ul>
