--- a/apps/kamsguard-web/src/app/features/events/events.component.html
+++ b/apps/kamsguard-web/src/app/features/events/events.component.html
@@ -21,10 +21,10 @@
         </tr>
         <!-- Add more rows here if needed -->
       </table>
-      <div class="event-details-json">
+      <!-- <div class="event-details-json">
         <strong>Details:</strong>
         <pre>{{ event.details | json }}</pre>
-      </div>
+      </div> -->
     </div>
   </mat-expansion-panel>
 </mat-accordion>
