--- a/apps/kamsguard-web/src/app/core/layout/header/header.component.html
+++ b/apps/kamsguard-web/src/app/core/layout/header/header.component.html
@@ -8,11 +8,14 @@
     <mat-icon>menu</mat-icon>
   </button>
   &nbsp;
-  <span class="brand-logo" routerLink='/home'>KamsGuard Solutions</span>
+  <span class="brand-logo" routerLink='/home'>Kamsguard Slns</span>
   <span class="example-spacer"></span>
   
-  <!-- New navigation links -->
-  <a class="nav-link" routerLink="/">Home</a>
-  <a class="nav-link" routerLink="/contact-us">Support</a>
-  <a class="nav-link" routerLink="/auth">My Account</a>
+  <!-- Navigation links wrapped in a div -->
+  <div class="nav-links-container">
+    <a class="nav-link" routerLink="/">Home</a>
+    <a class="nav-link" routerLink="/contact-us">Support</a>
+    <a class="nav-link" routerLink="/auth">My Account</a>
+  </div>
+  
 </mat-toolbar>
