Made some adjustments on sidenav

--- a/apps/kamsguard-web/src/app/core/layout/header/header.component.html
+++ b/apps/kamsguard-web/src/app/core/layout/header/header.component.html
@@ -8,7 +8,7 @@
     <mat-icon>menu</mat-icon>
   </button>
   &nbsp;
-  <span class="brand-logo" routerLink='/home'>Kamsguard Slns</span>
+  <span class="brand-logo" routerLink="/">Kamsguard Slns</span>
   <span class="example-spacer"></span>
   
   <!-- Navigation links wrapped in a div -->
