--- a/apps/kamsguard-web/src/app/features/real-time/real-time.component.html
+++ b/apps/kamsguard-web/src/app/features/real-time/real-time.component.html
@@ -1,5 +1,5 @@
 <div class="events-container">
-  <h2>Recent Events</h2>
+  <h2 class="h2">Recent Events</h2>
   <table mat-table [dataSource]="events" class="mat-elevation-z8">
 
     <!-- Camera Column -->
