--- a/apps/kamsguard-web/src/styles.scss
+++ b/apps/kamsguard-web/src/styles.scss
@@ -35,7 +35,17 @@ html, body {
 
 .h2 {
   margin-bottom: 14px;
-  font-size: 30px;
+  font-size: 20px;
+  color: #0E2B5C;
+}
+.h3 {
+  margin-bottom: 14px;
+  font-size: 18px !important;
+  color: #0E2B5C;
+}
+.h4 {
+  margin-bottom: 14px;
+  font-size: 16px !important;
   color: #0E2B5C;
 }
 .card-header {
