--- a/apps/kamsguard-web/src/app/core/home/home.component.html
+++ b/apps/kamsguard-web/src/app/core/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="home-container">
   <section class="hero">
     <div class="hero-text">
-      <h2>
-        Protecting Lives with Advanced <br />
+      <h1>
+        Protecting Property with Advanced <br />
         Fire Detection
-      </h2>
+      </h1>
       <p>Discover how our technology keeps you safe.</p>
-      <button mat-raised-button color="primary">Learn More</button>
+      <button mat-raised-button color="primary" (click)="scrollToIndustrialSolutions()">Learn More</button>
     </div>
     <img
       src="/Kamsware-Fire-Prevention-Systems.jpg"
@@ -15,40 +15,6 @@
     />
   </section>
   
-  <section class="industrial-solutions">
-    <div class="industrial-solutions-content slide-in-left">
-      <h3>KamsGuard Fire Prevention System</h3>
-
-      <p>Don’t give fire a chance—act before it’s too late.</p>
-      <p>
-        Experience unparalleled protection with the KamsGuard Fire Prevention
-        System, your ultimate shield against the unexpected. Our cutting-edge
-        technology ensures that you’re always a step ahead, detecting fires in
-        their earliest stages to prevent disaster before it strikes.
-      </p>
-
-      <h4>Why Choose KamsGuard?</h4>
-      <p>
-        With our “State-of-the-Art” Fire Prevention System, you’re not just
-        installing a fire detector—you’re investing in peace of mind. Our system
-        offers:
-      </p>
-      <p>
-        <span>Instant Detection:</span> Be alerted the moment a fire hazard is
-        detected, allowing you to take immediate action.
-      </p>
-      <p>
-        <span>Comprehensive Coverage:</span>Protect every corner of your
-        property with advanced sensors and real-time monitoring.
-      </p>
-      <p>
-        <span>Reliability You Can Trust:</span> Built to the highest standards,
-        KamsGuard is your dependable partner in fire safety.
-      </p>
-      <p>Stay safe. Stay protected. Stay ahead with KamsGuard.</p>
-    </div>
-  </section>
-
   <section class="features">
     <mat-card class="feature-card">
       <mat-icon>notifications</mat-icon>
@@ -104,6 +70,39 @@
       alt="Information Image"
       class="info-image slide-in-right"
     />
+  </section>
+  <section id="industrial-solutions" class="industrial-solutions">
+    <div class="industrial-solutions-content slide-in-left">
+      <h3>KamsGuard Fire Prevention System</h3>
+
+      <p>Don’t give fire a chance—act before it’s too late.</p>
+      <p>
+        Experience unparalleled protection with the KamsGuard Fire Prevention
+        System, your ultimate shield against the unexpected. Our cutting-edge
+        technology ensures that you’re always a step ahead, detecting fires in
+        their earliest stages to prevent disaster before it strikes.
+      </p>
+
+      <h4>Why Choose KamsGuard?</h4>
+      <p>
+        With our “State-of-the-Art” Fire Prevention System, you’re not just
+        installing a fire detector—you’re investing in peace of mind. Our system
+        offers:
+      </p>
+      <p>
+        <span>Instant Detection:</span> Be alerted the moment a fire hazard is
+        detected, allowing you to take immediate action.
+      </p>
+      <p>
+        <span>Comprehensive Coverage:</span>Protect every corner of your
+        property with advanced sensors and real-time monitoring.
+      </p>
+      <p>
+        <span>Reliability You Can Trust:</span> Built to the highest standards,
+        KamsGuard is your dependable partner in fire safety.
+      </p>
+      <p>Stay safe. Stay protected. Stay ahead with KamsGuard.</p>
+    </div>
   </section>
 
 
