--- a/apps/kamsguard-web/src/app/features/clients/clients.component.html
+++ b/apps/kamsguard-web/src/app/features/clients/clients.component.html
@@ -1,11 +1,10 @@
 <div class="clients-container">
-    <h2>Clients</h2>
     
     <!-- Client Overview -->
     <div class="client-overview">
-      <h3>Client Overview</h3>
+      <h3>Company Overview</h3>
       <mat-form-field appearance="outline">
-        <mat-label>Search Clients</mat-label>
+        <mat-label>Search Company</mat-label>
         <input matInput (input)="onSearch($event)" placeholder="Search by name, location, etc.">
       </mat-form-field>
       <div class="client-list">
