--- a/apps/kamsguard-web/src/app/features/connected-devices/connected-devices.component.html
+++ b/apps/kamsguard-web/src/app/features/connected-devices/connected-devices.component.html
@@ -2,7 +2,7 @@
 <div class="connected-devices">
   <mat-card class="overview-card">
     <mat-card-header>
-      <mat-card-title>Active Devices</mat-card-title>
+      <mat-card-title>Connected Detectors</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <table mat-table [dataSource]="connectedDevices">
@@ -16,52 +16,51 @@
           <td mat-cell *matCellDef="let device"> {{device.localIp}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="responseArea">
+        <!-- <ng-container matColumnDef="responseArea">
           <th mat-header-cell *matHeaderCellDef> Response Message </th>
           <td mat-cell *matCellDef="let device"> {{device.responseArea}} </td>
-        </ng-container>
+        </ng-container> -->
 
         <ng-container matColumnDef="systemCamera">
           <th mat-header-cell *matHeaderCellDef> System Camera </th>
           <td mat-cell *matCellDef="let device"> {{device.systemCamera}} </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="['siteId', 'localIp', 'responseArea', 'systemCamera']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['siteId', 'localIp', 'responseArea', 'systemCamera'];"></tr>
+        <tr mat-header-row *matHeaderRowDef="['siteId', 'localIp', 'systemCamera']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['siteId', 'localIp', 'systemCamera'];"></tr>
       </table>
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="camfail-card">
+  <!-- <mat-card class="camfail-card">
     <mat-card-header>
       <mat-card-title>Detector reset history</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <table mat-table [dataSource]="camFailEvents">
-        <!-- Site ID Column -->
+       
         <ng-container matColumnDef="siteId">
           <th mat-header-cell *matHeaderCellDef> Site ID </th>
           <td mat-cell *matCellDef="let event"> {{event.site_id}} </td>
         </ng-container>
   
-        <!-- Channel Column -->
+      
         <ng-container matColumnDef="channel">
           <th mat-header-cell *matHeaderCellDef> Channel </th>
           <td mat-cell *matCellDef="let event"> {{event.channel}} </td>
         </ng-container>
   
-        <!-- Time Column -->
         <ng-container matColumnDef="time">
           <th mat-header-cell *matHeaderCellDef> Time </th>
           <td mat-cell *matCellDef="let event"> {{ event.time | date:'short' }} </td>
         </ng-container>
   
-        <!-- Header Row Definition -->
+      
         <tr mat-header-row *matHeaderRowDef="['siteId', 'channel', 'time']"></tr>
-        <!-- Data Row Definition -->
+      
         <tr mat-row *matRowDef="let row; columns: ['siteId', 'channel', 'time'];"></tr>
       </table>
     </mat-card-content>
-  </mat-card>
+  </mat-card> -->
   
 </div>
